# Godot-DragonBones

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh.md  SConstruct  build_version.py  generate_xcframework.sh  project.godot  register_types.cpp  version  version.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
addons/gddragonbones/: README.md  README.zh.md  gddragonbones.gdextension
addons/gddragonbones/icons/: DragonBonesWhite.png.import
addons/godot_dragon_bones.daylily-zeleen/: README.md  README.zh.md  godot_dragon_bones.gdextension
addons/godot_dragon_bones.daylily-zeleen/icons/: DragonBonesBlue.png.import  DragonBonesWhite.png.import
assets/: Dragon_tex.png.import
demo/: .gitignore  demo.tscn  icon.png.import  project.godot
demo/addons/gddragonbones/: gddragonbones.gdextension
demo/addons/gddragonbones/icons/: DragonBonesArmature.png.import  DragonBonesBlue.png.import  DragonBonesBone.png.import  DragonBonesFactory.png.import  DragonBonesSlot.png.import  doc_icon.png.import
demo/addons/godot_dragon_bones.daylily-zeleen/: godot_dragon_bones.gdextension
demo/addons/godot_dragon_bones.daylily-zeleen/icons/: DragonBonesArmature.png.import  DragonBonesBone.png.import  DragonBonesFactory.png.import  DragonBonesSlot.png.import
demo/assets/: Dragon_ske.dbfactory  Dragon_ske.json  Dragon_ske.json.import  Dragon_tex.json  Dragon_tex.png.import
demo/dragonbones_demo/: demo.gd  demo.tscn
demo/dragonbones_demo/assets/: Dragon_ske.dbfactory  Dragon_tex.png.import  龙_ske.dbfactory
doc_classes/: DragonBonesArmature.xml  DragonBonesArmatureView.xml  DragonBonesBone.xml  DragonBonesEventObject.xml  DragonBonesFactory.xml  DragonBonesSlot.xml  DragonBonesUserData.xml
dragonbones_demo/: demo.gd  demo.tscn
dragonbones_demo/assets/: Dragon_ske.dbfactory  龙_ske.dbfactory  龙_ske.json  龙_tex.json  龙_tex.png.import
misc/: copy_dir.py
src/: armature.cpp  armature.h  armature_display.cpp  armature_display.h  armature_view.cpp  armature_view.h  bone.cpp  bone.h  dragon_bones.cpp  dragon_bones.h  dragon_bones_registration.cpp  dragon_bones_registration.h  dragonbones.cpp  dragonbones.h  dragonbones_armature.cpp  dragonbones_armature.h  dragonbones_bone.cpp  dragonbones_bone.h  dragonbones_factory.cpp  dragonbones_factory.h  dragonbones_registration.cpp  dragonbones_registration.h  dragonbones_slot.cpp  dragonbones_slot.h  event_object.cpp  event_object.h  factory.cpp  factory.h  godot_dragonbones.h  mesh_display.cpp  mesh_display.h  slot.cpp  slot.h  texture_atlas_data.h  utils.h
src/dragonBones/core/: BaseObject.h  DragonBones.h
src/dragonBones/model/: ArmatureData.cpp
src/dragonBones/parser/: BinaryDataParser.cpp  BinaryDataParser.h  JSONDataParser.cpp  JSONDataParser.h
src/editor/: dragon_bones_editor_plugin.cpp  dragon_bones_editor_plugin.h  dragonbones_editor_plugin.cpp  dragonbones_editor_plugin.h
src/wrappers/: GDDisplay.cpp  GDDisplay.h  GDMesh.h  GDTextureAtlasData.h  dragonbones_texture_atlas_data.h  i_dragonbones_display.cpp  i_dragonbones_display.h  mesh_display.cpp  mesh_display.h
